feat(admin): UI/UX overhaul, class-based dark mode, global UI utils, Streams/Reports redesign, Users online/etkin status; backend donations/streams animal_type/animal_count/slaughter_intent; safer API base/parse

--- a/kurban-cebimde/src/locales/tr.json
+++ b/kurban-cebimde/src/locales/tr.json
@@ -74,9 +74,9 @@
       "liveStreams": "Canlı Yayınlar",
       "liveStream": "Canlı Yayın",
       "myDonations": "Bağışlarım",
-      "certificates": "Sertifikalarım",
+      "broadcastHistory": "Yayın Geçmişi",
       "myCards": "Kartlarım",
-      "reports": "Raporlarım",
+      "mediaPackages": "Medya Paketleri",
       "checkout": "Ödeme",
       "admin": "Admin",
       "streams": "Yayınlar"
